force-app/main/default/objects/Apttus_Config2__CategoryTranslation__c/Apttus_Config2__CategoryTranslation__c.object-meta.xml
<CustomObject>
    <label>CategoryTranslation</label>
    <nameField>
        <label>CategoryTranslation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CategoryTranslations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>