force-app/main/default/objects/Apttus_Config2__CategoryTranslation__c/fields/Apttus_Config2__CategoryHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CategoryHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CategoryHierarchy</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>CategoryTranslations</relationshipLabel>
    <relationshipName>Translation</relationshipName>
    <type>Lookup</type>
</CustomField>