force-app/main/default/objects/Apttus_Config2__CategoryTranslation__c/fields/Apttus_Config2__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>