force-app/main/default/objects/Apttus_Config2__CategoryTranslation__c/fields/Apttus_Config2__Language__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>